# matrix-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  example.config.toml
.github/workflows/: ci.yml  code-coverage.yml  release.yml  semver.yml
src/: api.rs  config.rs  deleteme.rs  main.rs
src/api/: join_room.rs  login.rs  mock_server.rs  mod.rs  send_message.rs  verify_in_room.rs  verify_token.rs
tests/: cli.rs
