[package]
name = "matrix-notify"
version = "0.3.1"
edition = "2021"
description = "A command line tool for sending messages to a matrix chatroom."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
clap = { version = "4.3.17", features = ["derive", "cargo"] }
fake = "2.6.1"
mockito = "1.1.0"
reqwest = { version = "0.11.18", features = ["json", "native-tls"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.43"
tokio = "1.29.1"
toml = "0.7.6"
