[package]
name = "matrix-notify"
version = "0.3.4"
edition = "2021"
description = "A command line tool for sending messages to matrix chatrooms."
license = "MIT"
repository = "https://github.com/dennis-lawter/matrix-notify"
keywords = ["matrix", "chat"]
readme = "README.md"

[[bin]]
name = "matrix-notify"
src = "src/main.rs"
test = true

[dependencies]
assert_cmd = "2.0.12"
clap = { version = "4.3.17", features = ["derive", "cargo"] }
predicates = "3.0.3"
reqwest = { version = "0.11.18", features = ["json", "native-tls"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
mockito = "1.1.0"

[dev-dependencies]
fake = "2.6.1"
matches = "0.1.10"
serial_test = { version = "2.0.0", features = ["file_locks"] }
tempfile = "3.7.0"
